# python-lib-with-cpp

./: README.md  pyproject.toml  setup.py
src/numpy_cpp_add/: __init__.py  cpp_add.cpp
tests/: test_basic.py
